--- a/main/templates/news_detail.html
+++ b/main/templates/news_detail.html
@@ -4,6 +4,7 @@
     <p><a href="{% url 'main:show_main' %}"><button>← Back to News List</button></a></p>
 
     <h1>{{ news.title }}</h1>
+    
     <p>
         <b>{{ news.get_category_display }}</b>
 
@@ -27,4 +28,12 @@
     {% endif %}
 
     <p>{{ news.content }}</p>
+
+    {% if news.user %}
+        <p>Author: {{ news.user.username }}</p>
+    {% else %}
+        <p>Author: Anonymous</p>
+    {% endif %}
+
+    {% endblock content %}
 {% endblock content %}
